full config saving and fixes